# Recon-automation-Bug-bounty-stack

./: .auto_copyright_log.txt  .auto_copyright_state.json  .breach_guardian_state.json  .copyright  .cursor.yml  .env.example  .gitignore  .license  .program_history  1inch_bug_report.md  2_HOUR_AUTONOMOUS_WORK_COMPLETE.md  3D_PARALLEL_MONEY_MAP.html  3D_PARALLEL_MONEY_MAP_FORTUNE100.html  3D_PARALLEL_OPTIMIZATION_COMPLETE.md  ACCELERATOR_V2_ARCHITECTURE.md  ACHIEVEMENT_ANALYSIS.md  ACTION_PLAN_TODAY.md  ACTION_PLAN_TO_EARNINGS.md  ADVANCED_AI_RECON.py  ADVANCED_DEMONSTRATION_SCRIPT.py  ADVANCED_PENETRATION_TESTING_FRAMEWORK.py  ADVANCED_UPWORK_STRATEGIES.md  ADVANCED_VETRAFI_TESTING.py  AFFILIATE_MARKETING_INTEGRATION.md  AFFILIATE_SETUP_TODAY.md  AGENTIC_QUICK_START.md  AGENTIC_REASONING_LAYER.py  AGENTIC_SYSTEM_COMPLETE.md  AGENTIC_SYSTEM_INDEX.md  AGENTS.md  AGENT_DELEGATION_NOW.md  AGENT_LOOPS_COMPLETE.md  AGENT_LOOP_DASHBOARD.html  AGENT_PERFORMANCE_INVESTIGATION.md  AGENT_PROMPTS.txt  AGENT_SKILL_REQUIREMENTS.md  AI_BUG_BOUNTY_SYSTEM.py  AI_CAPABILITY_UPGRADE.md  AI_CONCEPTS_EXPLAINED.md  AI_CONSULTANT_DEMO.py  (+1044 more)
.ai-training/: DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  POWER_LEVEL_UPGRADE.md  README.md  advanced-ai-capabilities.json  agent-training-manifest.json  ai-assistant-guide.md  api-schemas.json  bleeding-edge-features.json  command-reference.md  context-awareness-engine.json  integration-patterns.md  intent-patterns.json  openapi-spec.yaml  performance-optimization-ml.json  real-time-collaboration.json  training-index.md  usage-examples.md  validation-rules.json  verify-training.py
.cascade_snapshots/: snapshot_index.json
.cursor/: HTML_AUTO_FIX_CHECKLIST.md  HTML_FILE_HANDLING_GUIDE.md  HTML_TRAINING.md  QUICK_REF.txt
.independent_protocol/: config.json
.legal_protection/: CP-GA-20251103-b4bf2c06973816b2.json  CP-GA-20251106-f2e84715ecd92ba3.json  copyright_registry.json
.mcp/: .env.example  QUICK_START.md  README.md  config.json  deployment_workflows.json
.opsec/: FINAL_DEPLOYMENT_SUMMARY.txt  IMPLEMENTATION_SUMMARY.txt
.protection/: README.md  blocked_targets.json  rate_tracking.json  scope_definitions.json
.recovery/: .SHADOWSTEP_RECOVERY_VAULT
01_CORE_SYSTEMS/: AI_PROPOSAL_GENERATOR.py  AUTOMATED_WORKFLOW_ORCHESTRATOR.py  DASHBOARD_CONNECTOR.py  MASTER_INTEGRATION_SYSTEM.py  PARALLELPROFIT_MASTER.py  UPWORK_INTEGRATION_ENGINE.py
03_ENTERPRISE_SALES/: school_districts_tracker.csv
04_PRODUCT_DEMOS/: GHOST_PROTOCOL_SALES.html  GHOST_PROTOCOL_V2.html  MASTER_PRODUCT_SHOWCASE.html  NEXUS_ENGINE.html  NEXUS_ENGINE_V2.html  PARALLELPROFIT_BLEEDING_EDGE.html  PARALLELPROFIT_V2.html  RESUME_KHALLID_NURSE.html  SECURESTACK_V2.html  WORKTREE_BLEEDING_EDGE.html
05_BUSINESS_DOCUMENTATION/: COMPLETE_SALES_PACKAGE.md  EDUCATION_MARKET_STRATEGY.md  PITCH_DECK_ONE_PAGE.md  TARGET_COMPANIES_LIST.md
07_DEPLOYMENT_GUIDES/: AUTONOMOUS_INSTRUCTIONS.md
CodeAware/: BUSINESS_PLAN.md  DEPLOYMENT.md  (+10 more)
(+1734 files in other folders)
